--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ name = "ciccio-podcast"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.12,<3.13"
 
 [build-system]
 requires = ["hatchling"]
